# media-analysis

./: README.md  cli.py  example.yaml  pyproject.toml  safe_move.py
bestvideo/: base_module.py  config.py  context.py  pipeline.py
bestvideo/modules/: meta_demo.py  scan_demo.py
docs/: pipeline_implementation.md  requirements.md
move/: README.md  analysis.md  move.py
